// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTree should list licenses non-recursively 1`] = `
"├─ axios@npm:0.24.0
│  ├─ axios@npm:0.24.0 (via npm:^0.24.0)
│  ├─ URL: https://github.com/axios/axios.git
│  ├─ VendorName: Matt Zabriskie
│  ├─ VendorUrl: https://axios-http.com
│  └─ MIT
│
├─ caseless@npm:0.12.0
│  ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
│  ├─ URL: https://github.com/mikeal/caseless.git
│  ├─ VendorName: Mikeal Rogers
│  └─ Apache-2.0
│
├─ has@npm:1.0.3
│  ├─ has@npm:1.0.3 (via npm:^1.0.3)
│  ├─ URL: https://github.com/tarruda/has.git
│  ├─ VendorName: Thiago de Arruda
│  ├─ VendorUrl: https://github.com/tarruda/has
│  └─ MIT
│
├─ is-ci@npm:1.2.1
│  ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
│  ├─ URL: https://github.com/watson/is-ci.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/is-ci
│  └─ MIT
│
└─ is-promise@npm:4.0.0
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   ├─ URL: https://github.com/then/is-promise.git
   ├─ VendorName: ForbesLindesay
   └─ MIT
"
`;

exports[`getTree should list licenses non-recursively for production 1`] = `
"└─ caseless@npm:0.12.0
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   ├─ URL: https://github.com/mikeal/caseless.git
   ├─ VendorName: Mikeal Rogers
   └─ Apache-2.0
"
`;

exports[`getTree should list licenses recursively 1`] = `
"├─ axios@npm:0.24.0
│  ├─ axios@npm:0.24.0 (via npm:^0.24.0)
│  ├─ URL: https://github.com/axios/axios.git
│  ├─ VendorName: Matt Zabriskie
│  ├─ VendorUrl: https://axios-http.com
│  └─ MIT
│
├─ caseless@npm:0.12.0
│  ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
│  ├─ URL: https://github.com/mikeal/caseless.git
│  ├─ VendorName: Mikeal Rogers
│  └─ Apache-2.0
│
├─ ci-info@npm:1.6.0
│  ├─ ci-info@npm:1.6.0 (via npm:^1.5.0)
│  ├─ URL: https://github.com/watson/ci-info.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/ci-info
│  └─ MIT
│
├─ follow-redirects@npm:1.14.8
│  ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
│  ├─ URL: https://github.com/follow-redirects/follow-redirects.git
│  ├─ VendorName: Ruben Verborgh
│  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
│  └─ MIT
│
├─ function-bind@npm:1.1.1
│  ├─ function-bind@npm:1.1.1 (via npm:^1.1.1)
│  ├─ URL: https://github.com/Raynos/function-bind.git
│  ├─ VendorName: Raynos
│  ├─ VendorUrl: https://github.com/Raynos/function-bind
│  └─ MIT
│
├─ has@npm:1.0.3
│  ├─ has@npm:1.0.3 (via npm:^1.0.3)
│  ├─ URL: https://github.com/tarruda/has.git
│  ├─ VendorName: Thiago de Arruda
│  ├─ VendorUrl: https://github.com/tarruda/has
│  └─ MIT
│
├─ is-ci@npm:1.2.1
│  ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
│  ├─ URL: https://github.com/watson/is-ci.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/is-ci
│  └─ MIT
│
└─ is-promise@npm:4.0.0
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   ├─ URL: https://github.com/then/is-promise.git
   ├─ VendorName: ForbesLindesay
   └─ MIT
"
`;

exports[`getTree should list licenses recursively for production 1`] = `
"└─ caseless@npm:0.12.0
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   ├─ URL: https://github.com/mikeal/caseless.git
   ├─ VendorName: Mikeal Rogers
   └─ Apache-2.0
"
`;

exports[`licenses list (node-modules) should list licenses 1`] = `
"├─ axios@npm:0.24.0
│  ├─ axios@npm:0.24.0 (via npm:^0.24.0)
│  ├─ URL: https://github.com/axios/axios.git
│  ├─ VendorName: Matt Zabriskie
│  ├─ VendorUrl: https://axios-http.com
│  └─ MIT
│
├─ caseless@npm:0.12.0
│  ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
│  ├─ URL: https://github.com/mikeal/caseless.git
│  ├─ VendorName: Mikeal Rogers
│  └─ Apache-2.0
│
├─ has@npm:1.0.3
│  ├─ has@npm:1.0.3 (via npm:^1.0.3)
│  ├─ URL: https://github.com/tarruda/has.git
│  ├─ VendorName: Thiago de Arruda
│  ├─ VendorUrl: https://github.com/tarruda/has
│  └─ MIT
│
├─ is-ci@npm:1.2.1
│  ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
│  ├─ URL: https://github.com/watson/is-ci.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/is-ci
│  └─ MIT
│
└─ is-promise@npm:4.0.0
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   ├─ URL: https://github.com/then/is-promise.git
   ├─ VendorName: ForbesLindesay
   └─ MIT
"
`;

exports[`licenses list (node-modules) should list licenses as json 1`] = `
"{
  "axios@npm:0.24.0": {
    "package": {
      "locator": "axios@npm:0.24.0",
      "descriptor": "axios@npm:^0.24.0"
    },
    "url": "https://github.com/axios/axios.git",
    "vendorName": "Matt Zabriskie",
    "vendorUrl": "https://axios-http.com",
    "license": "MIT"
  },
  "caseless@npm:0.12.0": {
    "package": {
      "locator": "caseless@npm:0.12.0",
      "descriptor": "caseless@npm:^0.12.0"
    },
    "url": "https://github.com/mikeal/caseless.git",
    "vendorName": "Mikeal Rogers",
    "license": "Apache-2.0"
  },
  "has@npm:1.0.3": {
    "package": {
      "locator": "has@npm:1.0.3",
      "descriptor": "has@npm:^1.0.3"
    },
    "url": "https://github.com/tarruda/has.git",
    "vendorName": "Thiago de Arruda",
    "vendorUrl": "https://github.com/tarruda/has",
    "license": "MIT"
  },
  "is-ci@npm:1.2.1": {
    "package": {
      "locator": "is-ci@npm:1.2.1",
      "descriptor": "is-ci@npm:^1.0.0"
    },
    "url": "https://github.com/watson/is-ci.git",
    "vendorName": "Thomas Watson Steen",
    "vendorUrl": "https://github.com/watson/is-ci",
    "license": "MIT"
  },
  "is-promise@npm:4.0.0": {
    "package": {
      "locator": "is-promise@npm:4.0.0",
      "descriptor": "is-promise@npm:^4.0.0"
    },
    "url": "https://github.com/then/is-promise.git",
    "vendorName": "ForbesLindesay",
    "license": "MIT"
  }
}"
`;

exports[`licenses list (node-modules) should list licenses for production 1`] = `
"└─ caseless@npm:0.12.0
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   ├─ URL: https://github.com/mikeal/caseless.git
   ├─ VendorName: Mikeal Rogers
   └─ Apache-2.0
"
`;

exports[`licenses list (node-modules) should list licenses recursively 1`] = `
"├─ axios@npm:0.24.0
│  ├─ axios@npm:0.24.0 (via npm:^0.24.0)
│  ├─ URL: https://github.com/axios/axios.git
│  ├─ VendorName: Matt Zabriskie
│  ├─ VendorUrl: https://axios-http.com
│  └─ MIT
│
├─ caseless@npm:0.12.0
│  ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
│  ├─ URL: https://github.com/mikeal/caseless.git
│  ├─ VendorName: Mikeal Rogers
│  └─ Apache-2.0
│
├─ ci-info@npm:1.6.0
│  ├─ ci-info@npm:1.6.0 (via npm:^1.5.0)
│  ├─ URL: https://github.com/watson/ci-info.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/ci-info
│  └─ MIT
│
├─ follow-redirects@npm:1.14.8
│  ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
│  ├─ URL: https://github.com/follow-redirects/follow-redirects.git
│  ├─ VendorName: Ruben Verborgh
│  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
│  └─ MIT
│
├─ function-bind@npm:1.1.1
│  ├─ function-bind@npm:1.1.1 (via npm:^1.1.1)
│  ├─ URL: https://github.com/Raynos/function-bind.git
│  ├─ VendorName: Raynos
│  ├─ VendorUrl: https://github.com/Raynos/function-bind
│  └─ MIT
│
├─ has@npm:1.0.3
│  ├─ has@npm:1.0.3 (via npm:^1.0.3)
│  ├─ URL: https://github.com/tarruda/has.git
│  ├─ VendorName: Thiago de Arruda
│  ├─ VendorUrl: https://github.com/tarruda/has
│  └─ MIT
│
├─ is-ci@npm:1.2.1
│  ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
│  ├─ URL: https://github.com/watson/is-ci.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/is-ci
│  └─ MIT
│
└─ is-promise@npm:4.0.0
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   ├─ URL: https://github.com/then/is-promise.git
   ├─ VendorName: ForbesLindesay
   └─ MIT
"
`;

exports[`licenses list (node-modules) should list licenses recursively for production 1`] = `
"└─ caseless@npm:0.12.0
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   ├─ URL: https://github.com/mikeal/caseless.git
   ├─ VendorName: Mikeal Rogers
   └─ Apache-2.0
"
`;

exports[`licenses list (pnp) should list licenses 1`] = `
"├─ axios@npm:0.24.0
│  ├─ axios@npm:0.24.0 (via npm:^0.24.0)
│  ├─ URL: https://github.com/axios/axios.git
│  ├─ VendorName: Matt Zabriskie
│  ├─ VendorUrl: https://axios-http.com
│  └─ MIT
│
├─ caseless@npm:0.12.0
│  ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
│  ├─ URL: https://github.com/mikeal/caseless.git
│  ├─ VendorName: Mikeal Rogers
│  └─ Apache-2.0
│
├─ has@npm:1.0.3
│  ├─ has@npm:1.0.3 (via npm:^1.0.3)
│  ├─ URL: https://github.com/tarruda/has.git
│  ├─ VendorName: Thiago de Arruda
│  ├─ VendorUrl: https://github.com/tarruda/has
│  └─ MIT
│
├─ is-ci@npm:1.2.1
│  ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
│  ├─ URL: https://github.com/watson/is-ci.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/is-ci
│  └─ MIT
│
└─ is-promise@npm:4.0.0
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   ├─ URL: https://github.com/then/is-promise.git
   ├─ VendorName: ForbesLindesay
   └─ MIT
"
`;

exports[`licenses list (pnp) should list licenses as json 1`] = `
"{
  "axios@npm:0.24.0": {
    "package": {
      "locator": "axios@npm:0.24.0",
      "descriptor": "axios@npm:^0.24.0"
    },
    "url": "https://github.com/axios/axios.git",
    "vendorName": "Matt Zabriskie",
    "vendorUrl": "https://axios-http.com",
    "license": "MIT"
  },
  "caseless@npm:0.12.0": {
    "package": {
      "locator": "caseless@npm:0.12.0",
      "descriptor": "caseless@npm:^0.12.0"
    },
    "url": "https://github.com/mikeal/caseless.git",
    "vendorName": "Mikeal Rogers",
    "license": "Apache-2.0"
  },
  "has@npm:1.0.3": {
    "package": {
      "locator": "has@npm:1.0.3",
      "descriptor": "has@npm:^1.0.3"
    },
    "url": "https://github.com/tarruda/has.git",
    "vendorName": "Thiago de Arruda",
    "vendorUrl": "https://github.com/tarruda/has",
    "license": "MIT"
  },
  "is-ci@npm:1.2.1": {
    "package": {
      "locator": "is-ci@npm:1.2.1",
      "descriptor": "is-ci@npm:^1.0.0"
    },
    "url": "https://github.com/watson/is-ci.git",
    "vendorName": "Thomas Watson Steen",
    "vendorUrl": "https://github.com/watson/is-ci",
    "license": "MIT"
  },
  "is-promise@npm:4.0.0": {
    "package": {
      "locator": "is-promise@npm:4.0.0",
      "descriptor": "is-promise@npm:^4.0.0"
    },
    "url": "https://github.com/then/is-promise.git",
    "vendorName": "ForbesLindesay",
    "license": "MIT"
  }
}"
`;

exports[`licenses list (pnp) should list licenses for production 1`] = `
"└─ caseless@npm:0.12.0
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   ├─ URL: https://github.com/mikeal/caseless.git
   ├─ VendorName: Mikeal Rogers
   └─ Apache-2.0
"
`;

exports[`licenses list (pnp) should list licenses recursively 1`] = `
"├─ axios@npm:0.24.0
│  ├─ axios@npm:0.24.0 (via npm:^0.24.0)
│  ├─ URL: https://github.com/axios/axios.git
│  ├─ VendorName: Matt Zabriskie
│  ├─ VendorUrl: https://axios-http.com
│  └─ MIT
│
├─ caseless@npm:0.12.0
│  ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
│  ├─ URL: https://github.com/mikeal/caseless.git
│  ├─ VendorName: Mikeal Rogers
│  └─ Apache-2.0
│
├─ ci-info@npm:1.6.0
│  ├─ ci-info@npm:1.6.0 (via npm:^1.5.0)
│  ├─ URL: https://github.com/watson/ci-info.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/ci-info
│  └─ MIT
│
├─ follow-redirects@npm:1.14.8
│  ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
│  ├─ URL: https://github.com/follow-redirects/follow-redirects.git
│  ├─ VendorName: Ruben Verborgh
│  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
│  └─ MIT
│
├─ function-bind@npm:1.1.1
│  ├─ function-bind@npm:1.1.1 (via npm:^1.1.1)
│  ├─ URL: https://github.com/Raynos/function-bind.git
│  ├─ VendorName: Raynos
│  ├─ VendorUrl: https://github.com/Raynos/function-bind
│  └─ MIT
│
├─ has@npm:1.0.3
│  ├─ has@npm:1.0.3 (via npm:^1.0.3)
│  ├─ URL: https://github.com/tarruda/has.git
│  ├─ VendorName: Thiago de Arruda
│  ├─ VendorUrl: https://github.com/tarruda/has
│  └─ MIT
│
├─ is-ci@npm:1.2.1
│  ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
│  ├─ URL: https://github.com/watson/is-ci.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/is-ci
│  └─ MIT
│
└─ is-promise@npm:4.0.0
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   ├─ URL: https://github.com/then/is-promise.git
   ├─ VendorName: ForbesLindesay
   └─ MIT
"
`;

exports[`licenses list (pnp) should list licenses recursively for production 1`] = `
"└─ caseless@npm:0.12.0
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   ├─ URL: https://github.com/mikeal/caseless.git
   ├─ VendorName: Mikeal Rogers
   └─ Apache-2.0
"
`;

exports[`licenses list (pnpm) should list licenses 1`] = `
"├─ axios@npm:0.24.0
│  ├─ axios@npm:0.24.0 (via npm:^0.24.0)
│  ├─ URL: https://github.com/axios/axios.git
│  ├─ VendorName: Matt Zabriskie
│  ├─ VendorUrl: https://axios-http.com
│  └─ MIT
│
├─ caseless@npm:0.12.0
│  ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
│  ├─ URL: https://github.com/mikeal/caseless.git
│  ├─ VendorName: Mikeal Rogers
│  └─ Apache-2.0
│
├─ has@npm:1.0.3
│  ├─ has@npm:1.0.3 (via npm:^1.0.3)
│  ├─ URL: https://github.com/tarruda/has.git
│  ├─ VendorName: Thiago de Arruda
│  ├─ VendorUrl: https://github.com/tarruda/has
│  └─ MIT
│
├─ is-ci@npm:1.2.1
│  ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
│  ├─ URL: https://github.com/watson/is-ci.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/is-ci
│  └─ MIT
│
└─ is-promise@npm:4.0.0
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   ├─ URL: https://github.com/then/is-promise.git
   ├─ VendorName: ForbesLindesay
   └─ MIT
"
`;

exports[`licenses list (pnpm) should list licenses as json 1`] = `
"{
  "axios@npm:0.24.0": {
    "package": {
      "locator": "axios@npm:0.24.0",
      "descriptor": "axios@npm:^0.24.0"
    },
    "url": "https://github.com/axios/axios.git",
    "vendorName": "Matt Zabriskie",
    "vendorUrl": "https://axios-http.com",
    "license": "MIT"
  },
  "caseless@npm:0.12.0": {
    "package": {
      "locator": "caseless@npm:0.12.0",
      "descriptor": "caseless@npm:^0.12.0"
    },
    "url": "https://github.com/mikeal/caseless.git",
    "vendorName": "Mikeal Rogers",
    "license": "Apache-2.0"
  },
  "has@npm:1.0.3": {
    "package": {
      "locator": "has@npm:1.0.3",
      "descriptor": "has@npm:^1.0.3"
    },
    "url": "https://github.com/tarruda/has.git",
    "vendorName": "Thiago de Arruda",
    "vendorUrl": "https://github.com/tarruda/has",
    "license": "MIT"
  },
  "is-ci@npm:1.2.1": {
    "package": {
      "locator": "is-ci@npm:1.2.1",
      "descriptor": "is-ci@npm:^1.0.0"
    },
    "url": "https://github.com/watson/is-ci.git",
    "vendorName": "Thomas Watson Steen",
    "vendorUrl": "https://github.com/watson/is-ci",
    "license": "MIT"
  },
  "is-promise@npm:4.0.0": {
    "package": {
      "locator": "is-promise@npm:4.0.0",
      "descriptor": "is-promise@npm:^4.0.0"
    },
    "url": "https://github.com/then/is-promise.git",
    "vendorName": "ForbesLindesay",
    "license": "MIT"
  }
}"
`;

exports[`licenses list (pnpm) should list licenses for production 1`] = `
"└─ caseless@npm:0.12.0
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   ├─ URL: https://github.com/mikeal/caseless.git
   ├─ VendorName: Mikeal Rogers
   └─ Apache-2.0
"
`;

exports[`licenses list (pnpm) should list licenses recursively 1`] = `
"├─ axios@npm:0.24.0
│  ├─ axios@npm:0.24.0 (via npm:^0.24.0)
│  ├─ URL: https://github.com/axios/axios.git
│  ├─ VendorName: Matt Zabriskie
│  ├─ VendorUrl: https://axios-http.com
│  └─ MIT
│
├─ caseless@npm:0.12.0
│  ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
│  ├─ URL: https://github.com/mikeal/caseless.git
│  ├─ VendorName: Mikeal Rogers
│  └─ Apache-2.0
│
├─ ci-info@npm:1.6.0
│  ├─ ci-info@npm:1.6.0 (via npm:^1.5.0)
│  ├─ URL: https://github.com/watson/ci-info.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/ci-info
│  └─ MIT
│
├─ follow-redirects@npm:1.14.8
│  ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
│  ├─ URL: https://github.com/follow-redirects/follow-redirects.git
│  ├─ VendorName: Ruben Verborgh
│  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
│  └─ MIT
│
├─ function-bind@npm:1.1.1
│  ├─ function-bind@npm:1.1.1 (via npm:^1.1.1)
│  ├─ URL: https://github.com/Raynos/function-bind.git
│  ├─ VendorName: Raynos
│  ├─ VendorUrl: https://github.com/Raynos/function-bind
│  └─ MIT
│
├─ has@npm:1.0.3
│  ├─ has@npm:1.0.3 (via npm:^1.0.3)
│  ├─ URL: https://github.com/tarruda/has.git
│  ├─ VendorName: Thiago de Arruda
│  ├─ VendorUrl: https://github.com/tarruda/has
│  └─ MIT
│
├─ is-ci@npm:1.2.1
│  ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
│  ├─ URL: https://github.com/watson/is-ci.git
│  ├─ VendorName: Thomas Watson Steen
│  ├─ VendorUrl: https://github.com/watson/is-ci
│  └─ MIT
│
└─ is-promise@npm:4.0.0
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   ├─ URL: https://github.com/then/is-promise.git
   ├─ VendorName: ForbesLindesay
   └─ MIT
"
`;

exports[`licenses list (pnpm) should list licenses recursively for production 1`] = `
"└─ caseless@npm:0.12.0
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   ├─ URL: https://github.com/mikeal/caseless.git
   ├─ VendorName: Mikeal Rogers
   └─ Apache-2.0
"
`;
